# lego-robotics

./: .pre-commit-config.yaml  Makefile  README.md  demo.py  gobbler.py  pyproject.toml  transformer.py
examples/: motor_example.py
examples/example_config/: __init__.py  lego_constants.py
projects/basic-motor-control/: main.py
projects/classic-bot/: README.md  main.py
projects/demos/: check-hub-status.py  demo.py
projects/examples/: test_motor.py
projects/gobbler/: gobbler.py
projects/remote-controller/: rc-demo.py
projects/transformer/: transformer.py
scripts/: gobbler.py
scripts/communication/: hub_to_pc.py
scripts/demos/: demo.py
src/: __init__.py  utils.py
src/animations/: __init__.py  characters.py  faces.py
src/driving/: __init__.py
src/movement/: __init__.py  walking.py
