[tool.poetry]
name = "lego-robotics"
version = "0.1.0"
description = ""
authors = ["HeberTU <heber.trujillo@glovoapp.com>"]
readme = "README.md"
packages = [{include = "lego_robotics"}]

[tool.poetry.dependencies]
python = " >=3.10,<3.12"
pybricks = "3.5.0"
pybricksdev = "^1.0.0a50"
pre-commit = "^3.8.0"
flake8-bugbear = "^23.3.23"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
mypy = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "E266", "E501", "W503"]
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
add-select = ["D204", "D400", "D401", "D404", "D9", "D10", "D11", "D12"]
